# wiki-creator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  orgs_resolution.json  pyproject.toml  requirements.txt  run_wiki.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.studio/: CLAUDE.md  config.example.yaml  invariants.md  mock.yaml  registry.lock.json
.studio/agents/: alias-adjudication.agent.yaml  chapter-summary-validator.agent.yaml  chapter-summary.agent.yaml  entity-affiliation.agent.yaml  entity-species.agent.yaml  entity-status.agent.yaml  extractor.agent.yaml  relationship-classifier-validator.agent.yaml  relationship-classifier.agent.yaml  relationship-discovery.agent.yaml  resolver.agent.yaml  section-filter.agent.yaml  wiki-page-item.agent.yaml  wiki-page-validator.agent.yaml  writer-lite.agent.yaml  writer.agent.yaml
.studio/contracts/: alias-adjudication-item.contract.yaml  alias-adjudication.contract.yaml  alias-resolution.contract.yaml  build-character-graph.contract.yaml  chapter-summary-item.contract.yaml  chapter-summary-validator.contract.yaml  chapter-summary.contract.yaml  copyright-check.contract.yaml  entity-affiliation-item.contract.yaml  entity-classification.contract.yaml  entity-clustering.contract.yaml  entity-extraction.contract.yaml  entity-resolution.contract.yaml  entity-species-item.contract.yaml  entity-status-item.contract.yaml  epub-parse.contract.yaml  merge-entities.contract.yaml  relationship-classifier-item.contract.yaml  relationship-classifier-validator.contract.yaml  relationship-discovery-item.contract.yaml  relationship-extraction.contract.yaml  resolve-clusters.contract.yaml  save-relationships.contract.yaml  section-filter-item.contract.yaml  section-filter.contract.yaml  split-clusters.contract.yaml  verify-entity-types.contract.yaml  wiki-export.contract.yaml  wiki-generation.contract.yaml  wiki-page-item.contract.yaml  wiki-page-validator.contract.yaml  wiki-page.contract.yaml  wiki-preparation.contract.yaml  write-registry.contract.yaml
.studio/inputs/: book.input.yaml
.studio/pipelines/: alias-adjudication-item.pipeline.yaml  chapter-summaries.pipeline.yaml  chapter-summary-item.pipeline.yaml  classify-relationships.pipeline.yaml  discover-relationships.pipeline.yaml  entity-affiliation-item.pipeline.yaml  entity-species-item.pipeline.yaml  entity-status-item.pipeline.yaml  pages-export.pipeline.yaml  relationship-classifier-item.pipeline.yaml  relationship-discovery-item.pipeline.yaml  section-filter-item.pipeline.yaml  wiki-extraction.pipeline.yaml  wiki-full.pipeline.yaml  wiki-generation.pipeline.yaml  wiki-page-item.pipeline.yaml  wiki-page.pipeline.yaml  wiki-pages.pipeline.yaml  wiki-pipeline.pipeline.yaml  (+2 more)
docs/: adding-a-language.md  adding-a-template.md  audit-2026-07-17.md  branch-protection.md  flow-audit.md  lang-packs.md  studio-coverage-audit-2026-07-18.md
models/: dev.spacy  train.spacy
ner_dataset/: dev.spacy  fantasy.jsonl  hobbit.jsonl  narnia.jsonl  tog.jsonl  train.spacy  wok.jsonl
preview/: README.md  index.html  package-lock.json  package.json  vite.config.js
preview/src/: App.jsx  (+5 more)
prisma/: schema.prisma
research/: CLAUDE.md  README.md
scripts/: CLAUDE.md  alias_adjudication.py  alias_adjudication_pre.py  alias_resolution.py  assemble_wiki_pages.py  build_character_graph.py  build_event_layer.py  chapter_summary.py  chapter_summary_pre.py  chapter_summary_validator.py  classify_relationships.py  classify_relationships_pre.py  consolidate_editorial_stance.py  convert_to_docbin.py  copyright_check.py  discover_relationships.py  discover_relationships_pre.py  entity_affiliation.py  entity_affiliation_pre.py  entity_classification.py  entity_clustering.py  entity_extraction.py  entity_species.py  entity_species_pre.py  entity_status.py  entity_status_pre.py  eval_coref.py  eval_relationship_classifier.py  export_lora_dataset.py  export_pages.py  fandom_wikis.yaml  generate_book_synopsis.py  generate_book_synopsis_pre.py  generate_event_pages.py  generate_event_pages_pre.py  generate_gold_examples.py  generate_wiki_pages.py  generate_wiki_pages_plan.py  generate_wiki_pages_probe.py  load_classified_entities.py  (+33 more)
tests/: _markers.py  conftest.py  test_alias_adjudication.py  test_alias_adjudication_stage.py  test_alias_resolution.py  test_assemble_wiki_pages.py  test_book_import.py  test_build_character_graph.py  test_build_event_layer.py  test_canon.py  test_chapter_summary.py  test_chapter_summary_validator.py  test_chapters.py  test_character_graph.py  test_character_graph_pipeline.py  test_classify_relationships.py  test_cli.py  test_collation.py  test_confidence.py  test_consolidation.py  test_contract_validators.py  test_convert_to_docbin.py  test_copyright_check.py  test_e2e_golden.py  test_e2e_smoke.py  test_e2e_spanish.py  test_editorial_stance.py  test_embedding_disambiguation.py  test_entity_affiliation.py  test_entity_classification.py  test_entity_clustering.py  test_entity_extraction.py  test_entity_links.py  test_entity_species.py  test_entity_status.py  test_eval_coref.py  test_event_layer.py  test_event_pages.py  test_export_helpers.py  test_export_lora_dataset.py  (+77 more)
wiki_creator/: __init__.py  alias_adjudication.py  book_import.py  canon.py  chapters.py  character_graph.py  cli.py  collation.py  confidence.py  consolidation.py  contract_validators.py  editorial_stance.py  embedding_disambiguation.py  entity_affiliation.py  entity_links.py  entity_species.py  entity_status.py  entity_taxonomy.py  event_layer.py  event_pages.py  export_helpers.py  facts.py  grounding.py  item_stream.py  lang.py  library.py  md2wiki.py  merge_strategies.py  naming.py  ner.py  page_templates.py  page_validators.py  paths.py  pov_attribution.py  preview.py  provenance.py  register.py  registry.py  relationship_discovery.py  relationship_eval.py  (+14 more)
(+421 files in other folders)
