[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-creator"
version = "0.1.0"
description = "Generate wiki pages from EPUB books via entity extraction"
authors = [{name = "Ariane Guay"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "spacy>=3.7",
    "lxml>=5.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "mwparserfromhell>=0.6",
    "requests>=2.31",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "types-networkx",
]
# Coreference resolution (scripts/relationship_extraction.py, opt-in via
# `coref: true` in the book YAML). Kept out of core deps: pulls torch and
# its wheel build breaks on some platforms.
coref = [
    "fastcoref>=2.1",
]

[project.urls]
Homepage = "https://github.com/studio-foundation/wiki-creator"

[tool.hatch.build.targets.wheel]
packages = ["wiki_creator"]
