[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-creator"
version = "0.1.0"
description = "Generate wiki pages from EPUB books via entity extraction"
authors = [{name = "Ariane Guay"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "spacy>=3.7",
    # spaCy's CLI (spacy download) imports click directly but no longer gets
    # it transitively: typer >= 0.26 dropped its click dependency.
    "click>=8",
    "lxml>=5.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "mwparserfromhell>=0.6",
    "requests>=2.31",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "types-networkx",
    "types-PyYAML",
]
# Coreference resolution (scripts/relationship_extraction.py, opt-in via
# `coref: true` in the book YAML). Kept out of core deps: pulls torch and
# its wheel build breaks on some platforms.
coref = [
    "fastcoref>=2.1",
]
# GLiNER zero-shot NER (scripts/entity_extraction.py, opt-in per book via
# `ner.backend: gliner`). An extra rather than a core dep for the same reason as
# coref: it pulls torch (STU-521).
gliner = [
    "gliner>=0.2.13",
]
embeddings = ["sentence-transformers>=3"]  # numpy comes transitively via spaCy

[project.urls]
Homepage = "https://github.com/studio-foundation/wiki-creator"

[tool.hatch.build.targets.wheel]
# `scripts` is packaged too: pipeline stage executors import sibling stages
# (e.g. classify_relationships imports relationship_extraction) and rely on
# `pip install -e .` putting both packages on sys.path — no sys.path hacks.
packages = ["wiki_creator", "scripts"]
