[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-creator"
version = "0.1.0"
description = "Generate wiki pages from EPUB books via entity extraction"
authors = [{name = "Ariane Guay"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "spacy>=3.7",
    # spaCy's CLI (spacy download) imports click directly but no longer gets
    # it transitively: typer >= 0.26 dropped its click dependency.
    "click>=8",
    "lxml>=5.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "mwparserfromhell>=0.6",
    "requests>=2.31",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "types-networkx",
    "types-PyYAML",
    # The NER-dependent tests need a real pipeline; the small model is enough
    # and keeps a dev install light. Without it they skip (tests/_markers.py).
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
# The spaCy models the library's books declare. Not on PyPI, so nothing pulls
# them transitively and a book whose model is absent silently runs a smaller
# sibling instead (STU-522). Pinned to wheels built for spaCy 3.8: a spaCy minor
# bump fails this install rather than resolving to a mismatched model.
models = [
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "fr_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.8.0/fr_core_news_lg-3.8.0-py3-none-any.whl",
]
# Coreference resolution (scripts/relationship_extraction.py, opt-in via
# `coref: true` in the book YAML). Kept out of core deps: pulls torch and
# its wheel build breaks on some platforms.
coref = [
    "fastcoref>=2.1",
]
# GLiNER zero-shot NER (scripts/entity_extraction.py, opt-in per book via
# `ner.invented_names: true`). An extra rather than a core dep for the same
# reason as coref: it pulls torch (STU-521).
gliner = [
    "gliner>=0.2.13",
]
embeddings = ["sentence-transformers>=3"]  # numpy comes transitively via spaCy

[project.urls]
Homepage = "https://github.com/studio-foundation/wiki-creator"

[[tool.mypy.overrides]]
# The gliner extra is absent in CI (which installs only [dev]) and neither
# package ships py.typed, so the same import raises import-not-found there and
# import-untyped locally. Ignoring the module rather than the error code covers
# both (STU-521).
module = ["gliner.*", "torch.*"]
ignore_missing_imports = true

[tool.hatch.metadata]
# The spaCy models in the `dev` and `models` extras are wheel URLs, not PyPI
# names — hatchling rejects a direct reference without this (STU-522).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# `scripts` is packaged too: pipeline stage executors import sibling stages
# (e.g. classify_relationships imports relationship_extraction) and rely on
# `pip install -e .` putting both packages on sys.path — no sys.path hacks.
packages = ["wiki_creator", "scripts"]
